# qq-silk-voice-exporter

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  SECURITY.md  Start-VoiceConverter.cmd  Start-VoiceConverter.vbs  THIRD_PARTY_NOTICES.md
.github/workflows/: build-windows.yml
LICENSES/: SILK-SDK.txt  silk-v3-decoder-MIT.txt
scripts/: Build.ps1  Convert-QQVoice.ps1  Export-WeChatVoice.ps1  QQ-Silk-Converter-GUI.ps1
src/: qq_silk.c  voice_converter_launcher.c  wechat_record.c  wechat_voice.c
tests/: Test-PowerShellFrontends.ps1  Test-QQSilk.ps1  Test-WeChatRecorder.ps1  Test-WeChatVoice.ps1
